[project]
name = "test_pypi_pru"
version = "0.6.3"
authors = [
  { name="Example Author", email="author@example.com" },
]
description = "Proyecto compilado con Cython (Binarios solamente). Proyecto empaquetado con scikit-build-core y setuptools"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICENSE*"]

dependencies = ["pandas", "numpy"]

[build-system]
requires = [
  "scikit-build-core>=0.10",
  "setuptools>=61.0",
  "wheel",
  "cython>=3.0",
  "numpy",
  "mypy"  # Necesario para stubgen
  # QUITAR "pandas" de aquí - no es necesario para compilar
]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
cmake.version = ">=3.20"
wheel.packages = ["src/test_pypi_pru"]
cmake.build-type = "Release"
# Excluir archivos .py del wheel, excepto __init__.py
# Los .pyi se instalan via CMake install() así que NO los excluimos aquí
wheel.exclude = [
    "**.py",
    "!**/__init__.py"
]
# Asegurar que se incluyen archivos de tipo en el wheel
install.components = ["runtime"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["test_pypi_pru*"] # include = ["latuca*"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"*" = ["__init__.py"]  # Solo incluir __init__.py

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
update_changelog_on_bump = true
version_provider = "pep621"
annotated_tag = true
