[project]
name = "test_pypi_pru"
version = "0.7.1"
authors = [
  { name="Example Author", email="author@example.com" },
]
description = "Proyecto compilado con Cython (Binarios solamente). Proyecto empaquetado con scikit-build-core y setuptools"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

# license = "MIT" pon esto o lo siguiente si existe el fichero LICENSE en la raíz
license = {file = "LICENSE"}

dependencies = [
  "pandas>=3.0.0",
  "numpy>=2.4.2"
]

[project.optional-dependencies]
docs = [
  "mkdocs-material>=9.5",
  "mkdocstrings[python]>=0.24",
  "pymdown-extensions>=10.7",
  "mike>=2.0"
]

[build-system]
requires = [
  "scikit-build-core>=0.10",
  "setuptools>=61.0",
  "wheel",
  "cython>=3.0",
  "numpy>=1.24",  # ✅ Especificar versión mínima
  "mypy"  # Necesario para stubgen
  # QUITAR "pandas" de aquí - no es necesario para compilar
]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
cmake.version = ">=3.20"
cmake.build-type = "Release"
# wheel.packages = ["test_pypi_pru"]  # ✅ QUITAR wheel.packages - CMake ya maneja la instalación

# ✅ MEJORA: Optimizaciones de build
cmake.args = [
  "-DCMAKE_BUILD_PARALLEL_LEVEL=4",
  "-DCMAKE_INTERPROCEDURAL_OPTIMIZATION=ON",  # Solo si funciona bien
]

# Excluir archivos .py del wheel, excepto __init__.py
# Los .pyi se instalan via CMake install() así que NO los excluimos aquí
wheel.exclude = [
    "**.py",
    "!**/__init__.py",
    "**.pyc",
    "**/__pycache__",
]
# Asegurar que se incluyen archivos de tipo en el wheel
install.components = ["runtime"]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
update_changelog_on_bump = true
version_provider = "pep621"
annotated_tag = true
