[project]
name = "test_pypi_pru"
version = "0.17.1"
authors = [
  { name="Example Author", email="author@example.com" },
]
maintainers = [
  {name = "Example Maintainer", email = "maintainer@example.com"},
]
description = "Proyecto compilado con Cython (Binarios solamente). Proyecto empaquetado con scikit-build-core y setuptools"
readme = "README.md"
requires-python = ">=3.14"
classifiers = [
    # Specify the Python versions you support here.
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    # How mature is this project? Common values are
    #   3 - Alpha
    #   4 - Beta
    #   5 - Production/Stable
    "Development Status :: 4 - Beta",
    # Indicate who your project is intended for
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
]

license = "LicenseRef-Proprietary"
license-files = ["LICENSE", "LICENSE_DOCS"] #license = { file = "LICENSE" }

# Help PyPI’s search box to suggest your project when people search for these keywords
keywords = [
  "cython",
  "compiled",
  "binary",
  "wheel",
  "documentation",
  "examples"
]

dependencies = [
  "pandas>=3.0.0",
  "numpy>=2.4.2"
]

[project.urls]
Homepage = "https://example.com"
Documentation = "https://actuaan.github.io/test_pypi_pub/latest/"
Repository = "https://github.com/actuaan/test_pypi_pub"
Issues = "https://github.com/actuaan/test_pypi_pub/issues"
Changelog = "https://github.com/actuaan/test_pypi_pub/blob/master/CHANGELOG.md"

[project.optional-dependencies]
docs = [
  "mkdocs-material>=9.5",
  "mkdocstrings[python]>=0.24",
  "pymdown-extensions>=10.7",
  "mike>=2.0"
]

[build-system]
requires = [
  "scikit-build-core>=0.11",
  "setuptools>=61.0",
  "wheel",
  "cython>=3.0",
  "numpy>=1.24"  # ✅ Especificar versión mínima
  # QUITAR "pandas" de aquí - no es necesario para compilar
]
build-backend = "scikit_build_core.build"

# ============================================================================
# Compilación con perfil BALANCED de seguridad Cython
# ============================================================================
# - Código fuente NO incluido en binarios (emit_code_comments=False)
# - Firmas de funciones NO expuestas (embedsignature=False)
# - Símbolos de depuración eliminados (strip --strip-all en Linux/macOS)
# - Optimización -O2 para balance rendimiento/seguridad
# - Perfil configurable: DEBUG (desarrollo) | BALANCED (prod) | STRICT (máxima seguridad)
#
# Cambiar perfil:
#   export CYTHON_SECURITY_PROFILE=STRICT
#   python -m build
# ============================================================================

[tool.scikit-build]
cmake.version = ">=3.20"
cmake.build-type = "Release"
# wheel.packages = ["test_pypi_pru"]  # ✅ QUITAR wheel.packages - CMake ya maneja la instalación

# ✅ MEJORA: Optimizaciones de build
cmake.args = [
  "-DCMAKE_BUILD_PARALLEL_LEVEL=4",
  "-DCMAKE_INTERPROCEDURAL_OPTIMIZATION=ON",  # Solo si funciona bien
]

# Excluir archivos .py del wheel, excepto __init__.py
# Los .pyi se instalan via CMake install() así que NO los excluimos aquí
wheel.exclude = [
    "**.py",
    "!**/__init__.py",
    "**.pyc",
    "**/__pycache__",
]
# Asegurar que se incluyen archivos de tipo en el wheel
install.components = ["runtime"]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
update_changelog_on_bump = false
version_provider = "pep621"
annotated_tag = true
